--- a/assets/scss/page/_popularCourses.scss
+++ b/assets/scss/page/_popularCourses.scss
@@ -29,6 +29,7 @@
         width: 100%;
         border-top: 1px solid #ececec;
         ul {
+          @include pxRem(padding-bottom, 15);
           display: flex;
           li {
             @include pxRem(padding, 5 10);
