--- a/assets/scss/page/_wcu.scss
+++ b/assets/scss/page/_wcu.scss
@@ -7,7 +7,7 @@
   }
   .img-wcu-cover {
     @include pxRem(height, 774);
-    background-image: url("/assets/images/banner2.jpg");
+    background-image: url("assets/images/banner2.jpg");
     background-position: center;
     background-size: cover;
     position: relative;
