--- a/assets/scss/base/_responsive.scss
+++ b/assets/scss/base/_responsive.scss
@@ -4,6 +4,15 @@
   }
 }
 @media screen and (max-width: 960px) {
+  .bottom-info {
+    .item {
+      border-bottom: 1px solid #e7e7e7;
+      display: block;
+      margin-bottom: 15px;
+      margin-right: 0;
+      padding: 0 0 15px;
+    }
+  }
   .top-navbar {
     display: none !important;
   }
