--- a/assets/scss/modules/_slide.scss
+++ b/assets/scss/modules/_slide.scss
@@ -20,6 +20,12 @@
     text-transform: uppercase;
   }
 }
+.bg-fixed {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .bg-cover {
   background-position: center;
   background-size: cover;
