--- a/assets/scss/modules/_slide.scss
+++ b/assets/scss/modules/_slide.scss
@@ -29,7 +29,7 @@
   &::after {
     background: #002147 none repeat scroll 0 0;
     content: "";
-    height: 942px;
+    height: 100%;
     left: 0;
     opacity: 0.5;
     position: absolute;
