--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -2,13 +2,13 @@
   box-sizing: border-box;
 }
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 26px;
   overflow-x: hidden;
   background-color: #ffffff;
-  a{
+  a {
     text-decoration: none;
   }
 }
@@ -26,7 +26,6 @@ body {
   html {
     font-size: 12px;
   }
-  
 }
 @media screen and (max-width: 480px) {
   html {
@@ -35,7 +34,7 @@ body {
 }
 @media screen and (min-width: 767px) {
   html {
-    font-size: 14px;   
+    font-size: 14px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -53,10 +52,15 @@ body {
     font-size: 14px;
   }
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #002147;
   line-height: 1.2;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   letter-spacing: 0;
   margin: 0;
 }
@@ -78,4 +82,3 @@ h5 {
 h6 {
   font-size: 1rem;
 }
-
