--- a/assets/scss/base/_responsive.scss
+++ b/assets/scss/base/_responsive.scss
@@ -26,6 +26,32 @@
       margin-bottom: 20px;
     }
   }
+  .info-author {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .item-general {
+      @include pxRem(margin-bottom, 15);
+      @include pxRem(padding-bottom, 15);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-left: none;
+      border-bottom: 1px dashed #999999;
+      margin-left: 0;
+    }
+  }
+  .btn-tab {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .tab-link {
+      width: 100%;
+      .btn-tab-content {
+        width: 100%;
+      }
+    }
+  }
   html {
     font-size: 6px;
   }
