--- a/assets/scss/pages/_coursesDetail.scss
+++ b/assets/scss/pages/_coursesDetail.scss
@@ -82,14 +82,27 @@
       }
       .panel-heading-courses {
         @include pxRem(padding, 20);
-        @include pxRem(margin-bottom, 15);
+        @include pxRem(margin-top, 15);
         background: $white;
         display: block;
         border: 1px solid #e7e7e7;
+        &.iconShow {
+          &::after {
+            @include pxRem(top, 17);
+            @include pxRem(font-size, 20);
+            @include pxRem(right, 10);
+            content: "\f107";
+            font-family: "Font Awesome 5 Free";
+            font-weight: 900;
+            color: $primary;
+          }
+        }
         &:hover {
           cursor: pointer;
         }
         .list-courses {
+          display: flex;
+          justify-content: space-between;
           &::after {
             content: "\f105";
             font-family: "Font Awesome 5 Free";
@@ -104,6 +117,14 @@
           display: flex;
           justify-content: space-between;
           background: #f7f7f7;
+          .item-name {
+            display: flex;
+            align-items: center;
+            .title-panel {
+              @include pxRem(font-size, 15);
+            }
+          }
+          
         }
         .panel-content-item {
           @include pxRem(padding, 20);
@@ -114,16 +135,6 @@
         @include pxRem(margin, 15 0);
         font-weight: 600;
         text-transform: uppercase;
-        &::after {
-          @include pxRem(top, 17);
-          @include pxRem(font-size, 20);
-          @include pxRem(right, 10);
-          content: "\f107";
-          position: absolute;
-          font-family: "Font Awesome 5 Free";
-          font-weight: 900;
-          color: #002147;
-        }
       }
     }
     .img-courses-detail {
@@ -150,6 +161,11 @@
     .btn-tab {
       @include pxRem(margin-bottom, 15);
       display: flex;
+      .tab-link {
+        :target {
+          background-color: $secondary;
+        }
+      }
     }
     .title-courses-detail {
       font-weight: 600;
@@ -175,6 +191,7 @@
   .title-post {
     @include pxRem(margin-bottom, 20);
     @include pxRem(padding-bottom, 15);
+    @include pxRem(margin-top, 20);
     display: inline-block;
     font-weight: 600;
     text-transform: uppercase;
@@ -232,4 +249,7 @@
       }
     }
   }
+}
+.active {
+  background-color: $secondary;
 }
