--- a/assets/scss/base/_responsive.scss
+++ b/assets/scss/base/_responsive.scss
@@ -4,7 +4,7 @@
   }
 }
 @media screen and (max-width: 960px) {
-  .bottom-info {
+  .bottom-info, .contact-info {
     .item {
       border-bottom: 1px solid #e7e7e7;
       display: block;
