--- a/assets/scss/pages/_all.scss
+++ b/assets/scss/pages/_all.scss
@@ -1,3 +1,8 @@
 @import 'home';
 @import 'courses';
 @import 'coursesDetail';
+@import 'contact';
+@import 'advisor';
+@import 'advisorDetail';
+@import 'formRegister';
+@import 'formLogin';
